a1/brendan_gordon/TEST_PROGRAMS/invalidtype/xiru_zhu/invalid1.min
var test : float;
var test : int;

#redeclaration
